Updated the Show form styling

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,10 +1,12 @@
-<h1>Create a New Article!</h1>
+<div id="page-content">
+<h1 class="text-center mt-4">Create New Articles</h1>
+
 
   <%= render 'form' %>
 
 </br>
 </br>
 
-<%= link_to "Cancel and Return to article listing", articles_path %>
 
 
+</div>
