--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,9 +1,40 @@
 @import 'bootstrap/dist/css/bootstrap';
 
 .navbar {
-  background-color: black,  !important;
+  background-color: #000000 !important;
 }
 
-.nav-links {
-  color: white,  !important;
+.nav-link {
+  color: #ffffff !important;
+}
+
+#logo {
+  float: left;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+#home-container {
+  margin-top: 25px;
+}
+
+.jumbotron {
+  background-image: asset-url('homepage1.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 425px;
+}
+
+html,
+body {
+  height: 100%;
+  background-color: lightgray;
+}
+
+#page-content {
+  flex: 1 0 auto;
 }
