--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,14 +6,15 @@
       <div class="card text-center shadow mb-5 bg-white rounded">
         <div class="card-header font-italic">
           By <%= @article.user.username %>
+          <%= link_to gravitar_for(@article.user), user_path(@article.user) %>
         </div>
         <div class="card-body">
             <div class="card-text text-left"><%= simple_format(@article.description) %></div>
-          
-          <%= link_to "Edit", edit_article_path(@article), class:"btn btn-outline-info" %>
-          
-          <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-outline-danger"%>
-        </div>
+          <% if logged_in? && @article.user == current_user %>
+            <%= link_to "Edit", edit_article_path(@article), class:"btn btn-outline-info" %>
+            <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-outline-danger"%>
+          <% end %>
+          </div>
         <div class="card-footer text-muted">
           <small>
             Created <%= time_ago_in_words(@article.created_at) %> Ago,
