--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,11 +26,12 @@
       <% if logged_in? %>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-          Profile: [<%= current_user.username %>]
+         <%= "(Admin)" if current_user.admin? %> Profile: [<%= current_user.username %>]
         </a>
         <div class="dropdown-menu">
             <%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %>
           <%= link_to "Edit your profile", edit_user_path(current_user), class: "dropdown-item" %>
+          <%= link_to "Delete profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: {confirm: "Are you sure?"} %>
         </div>
       </li>
         <li class="nav-item">
