--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,10 +1,19 @@
 <div class="container">
   <% flash.each do |name, msg| %>
+    <% if name == "notice" %>
     <div class="alert alert-success dismissible fade show" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
         <%= msg %>
     </div>
+    <% else %> 
+      <div class="alert alert-danger dismissible fade show" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+        <%= msg %>
+      </div>
+    <% end %>
   <% end %>
 </div>
