--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,6 +18,14 @@
           </div>
         </div>
 
+        <div class="form-group row">
+          <%= f.label :category, class: "col-2 col-form-label text-light" %></br>
+            <div class="col-10">
+              <%= f.collection_select :category_ids, Category.order(:name), :id, :name,
+              { prompt: "Make selction from list below (can select empty)"}, {multiple: true, class: "custom-select shadow rounded"} %>
+            </div>
+        </div>
+
         <div class="form-group row justify-content-center">
           <%= f.submit class: "btn btn-outline-light btn-lg" %>
         </div>
