--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-4">Create is New Category</h1>
+<h1 class="text-center mt-4">Edit category name</h1>
 
 <div class="container">
 
@@ -7,7 +7,7 @@
     <%= render 'form' %>
   </div>
     <div class="mb-3">
-      <%= link_to "[ Cancel and Return to categories listing ]", categories_path, class: "text-info" %>
+      <%= link_to "[ Cancel and Return to category ]", category_path(@category), class: "text-info" %>
     </div>
   </div>
 </div>
